# mnemolet-core

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
api/: server.py
cli/: main.py
cli/commands/: config.py
data/: tracker.sqlite
mnemolet_core/: config.py
mnemolet_core/cli/: main.py
mnemolet_core/cli/commands/: config.py
mnemolet_core/core/indexing/: qdrant_indexer.py
mnemolet_core/core/ingestion/: loader.py  preprocessor.py
mnemolet_core/core/ingestion/extractors/: audio_extractor.py  docx_extractor.py  odt_extractor.py  pdf_extractor.py  registry.py  text_extractor.py
mnemolet_core/core/query/generation/: generate_answer.py
mnemolet_core/core/query/retrieval/: search_documents.py
mnemolet_core/core/utils/: qdrant.py
mnemolet_core/embeddings/: local_llm_embed.py
mnemolet_core/indexing/: qdrant_indexer.py  qdrant_utils.py
mnemolet_core/ingestion/: base_loader.py  load_all_files.py  loader.py  loader_registry.py  pdf_loader.py  preprocessor.py  txt_loader.py
mnemolet_core/ingestion/extractors/: audio_extractor.py  base.py  docx_extractor.py  registry.py  text_extractor.py
mnemolet_core/ingestion/loaders/: docx_loader.py  pdf_loader.py  txt_loader.py
mnemolet_core/query/: generator.py  retriever.py
mnemolet_core/query/generation/: generate_answer.py  local_generator.py
mnemolet_core/query/retrieval/: qdrant_retriever.py  search_documents.py
mnemolet_core/storage/: db_tracker.py
mnemolet_core/utils/: qdrant.py  utils.py
src/mnemolet/: app.py  config.py
src/mnemolet/api/: routes.py
src/mnemolet/cli/: main.py
src/mnemolet/ui/: routes.py
src/mnemolet_core/: app.py  config.py
src/mnemolet_core/api/: routes.py  server.py
src/mnemolet_core/cli/: main.py
src/mnemolet_core/ui/: main.py  routes.py
tests/: test_db_tracker.py  test_embeddings.py  test_ingestion.py  test_preprocessor.py  test_qdrant_indexer.py
(+70 files in other folders)
