[tool.ruff.lint]
# enable isort rules
select = ["E", "F", "I"]

[project]
name = "mnemolet-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "fastapi[standard]>=0.121.0",
    "numpy>=2.3.3",
    "odfdo>=3.17.3",
    "pypdf>=6.1.3",
    "python-docx>=1.2.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "git-filter-repo>=2.47.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
