[tool.ruff.lint]
# enable isort rules
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemolet-core"
version = "0.1.0"
description = "MnemoLet minimal RAG system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "fastapi[standard]>=0.121.0",
    "faster-whisper>=1.2.1",
    "jinja2>=3.1.6",
    "numpy>=2.3.3",
    "odfdo>=3.17.3",
    "psutil>=7.1.3",
    "pypdf>=6.1.3",
    "python-docx>=1.2.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.1",
    "tomli-w>=1.2.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[project.scripts]
mnemolet = "mnemolet_core.cli.main:cli"

[dependency-groups]
dev = [
    "git-filter-repo>=2.47.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
